@@ -1,3 +1,8 @@
+2011-04-06  Andrey  <dev_null@ukr.net>
+
+	* grub-core/video/fb/video_fb.c (grub_video_fb_setup): Silence older
+	gcc warning.
+
 2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/lib/relocator.c (grub_relocator_alloc_chunk_align): Add few
